docs(memory): 记录 harness 加固步骤 1-9/10a 与上下文压缩的实测判定